# Project-work

./: README.md
PCB Designs/: Parts_list.xlsx  ReadMe.md
PCB Designs/Panel/: Panelized.kicad_pcb  Panelized.kicad_prl  Panelized.kicad_pro  fp-info-cache
Programming Guides/: programming_setup_Custom_Board_STM32U545RET6Q.md  programming_setup_Custom_Board_nRF5340.md  programming_setup_Nucleo-U545RE-Q.md  programming_setup_nRF5340DK.md
STM32U5/PWM_OUT_FREQ_MEASURE_DMA/: .project  PWM_In_dma.launch
STM32U5/SIX_FREQ_DMA/: .cproject  Six_Freq_DMA.ioc  Six_Freq_DMA.launch
STM32U5/SIX_FREQ_DMA_UART/: .mxproject  six_freq_dma_uart.launch
STM32U5/UART_Hello_World/: .mxproject  UART_Hello_World.ioc
STM32U5_codes/PWM_OUT_FREQ_MEASURE_DMA/: .cproject  .mxproject  PWM_In_dma.ioc
STM32U5_codes/SIX_FREQ_DMA/: .project
STM32U5_codes/SIX_FREQ_DMA_UART/: .cproject  .project  six_freq_dma_uart.ioc
STM32U5_codes/UART_Hello_World/: .cproject  .project  UART_Hello_World.launch
STM32U5_codes/cb_v1_6freq_usb/: .cproject  .mxproject  .project  cb_v1_6freq_usb.ioc  cb_v1_6freq_usb.launch
STM32U5_codes/cb_v2_6freq/: .cproject  .mxproject  .project  cb_v2_6freq.ioc  (+1 more)
nRF5340/UART_I2C_nRF5340/: CMakeLists.txt  nrf5340dk_nrf5340_cpuapp.overlay
nRF5340/UART_I2C_nRF5340/include/: lis2dtw12.h  uart_rx.h
nRF5340/UART_I2C_nRF5340/src/: uart_rx.c
nRF5340_Codes/sts40+lis2dtw12_v1/: CMakeLists.txt  nrf5340dk_nrf5340_cpuapp.overlay  readme.md
nRF5340_Codes/sts40+lis2dtw12_v1/include/: lis2dtw12.h
nRF5340_Codes/sts40+lis2dtw12_v1/src/: lis2dtw12.c  main.c  sts40.c
(+373 files in other folders)
